Change camel case to snake case

--- a/packages/evershop/src/modules/translation/api/createLanguage/payloadSchema.json
+++ b/packages/evershop/src/modules/translation/api/createLanguage/payloadSchema.json
@@ -10,8 +10,9 @@
     "icon": {
       "type": "string"
     },
-    "isDefault": {
-      "type": "number"
+    "is_default": {
+      "type": "number",
+      "enum": [0, 1]
     }
   },
   "required": ["code"]
